--- a/www/index.html
+++ b/www/index.html
@@ -20,29 +20,31 @@
 		<script src="http://api.fmeserver.com/js/v1.1/FMEServer.js" type="text/javascript"></script>
 
 		<script src="js/datadistribution.js" type="text/javascript"></script>
-		
+
 		  <!-- Bootstrap -->
   		<script src="libs/bootstrap/js/bootstrap.js"></script>
  		<link href="libs/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
   		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  		<link href="libs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">	
-		
+  		<link href="libs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+
 		<LINK REL="STYLESHEET" TYPE="text/css" HREF="css/reset.css">
 		<!--[if IE]>
 			<LINK REL="STYLESHEET" TYPE="text/css" HREF="css/ie.css">
 		<![endif]-->
-		<LINK REL="STYLESHEET" TYPE="text/css" HREF="css/index.css">			
+		<LINK REL="STYLESHEET" TYPE="text/css" HREF="css/index.css">
 
 	</head>
 	<body>
 	<span id="safe-ribbon"><a href="http://www.safe.com">Powered by FME</a></span>
 	  <div class="navbar navbar-fixed-top">
 	    <div class="navbar-inner">
-	      <div class="container">        
-	        <div class="brand">FME Server Demos</div> 
+	      <div class="container">
+	        <div class="brand">FME Server Demos</div>
 	        <ul class="nav pull-left">
-	          <a href="https://github.com/safesoftware/fmepedia-datadistribution-webmap" class="btn"><img src="libs/github.png"> Fork GitHub</a>
-	          <a href="https://github.com/safesoftware/fmepedia-datadistribution-webmap/archive/master.zip" class="btn"><i class="icon-download-alt"></i> Download Zip
+            <a href="https://knowledge.safe.com/articles/Samples_and_Demos/Raster-Data-Distribution-with-FME-Server" class="btn"> View KC article</a>
+      			<a href="http://playground.fmeserver.com/demos/" class="btn"><img src="libs/server-icon.png"> View all Demos</a>
+	          <a href="https://github.com/safesoftware/fmepedia-raster-data-distribution" class="btn"><img src="libs/github.png"> Fork GitHub</a>
+	          <a href="https://github.com/safesoftware/fmepedia-raster-data-distribution/archive/master.zip" class="btn"><i class="icon-download-alt"></i> Download Zip
 	          </a>
 	        </ul>
 	      </div>
@@ -61,7 +63,7 @@
 						Clear
 					</button>
 				</div>
-				
+
 				<h1>Step 2: Set Parameters</h1>
 				<form id="fmeForm" name="fmeForm" onsubmit="return dataDist.orderData(this);" onchange="dataDist.updateQuery()">
 					<!-- Extra service-specific directives -->
