--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
  <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" >
+<html xmlns="https://www.w3.org/1999/xhtml" lang="en" >
 	<head id='head'>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 		<title id='pageTitle'>Data Distribution Example</title>
@@ -10,14 +10,8 @@
 		<script type="text/javascript" src="js/google/polygoncontrol.js"></script>
 		<script type="text/javascript" src="js/google/maps-controller.js"></script>
 
-		<!--ArcGIS Maps Stuff -->
-		<LINK REL="STYLESHEET" TYPE="text/css" HREF="http://serverapi.arcgisonline.com/jsapi/arcgis/1.6/js/dojo/dijit/themes/tundra/tundra.css">
-		<script type="text/javascript" src="http://serverapi.arcgisonline.com/jsapi/arcgis/?v=1.6"></script>
-		<script type="text/javascript" src="js/arcgis/arcgis-polygoncontrol.js"></script>
-		<script type="text/javascript" src="js/arcgis/arcgis-maps-controller.js"></script>
-
 		<script src="libs/jquery-1.10.1.js"></script>
-		<script src="http://api.fmeserver.com/js/v1.1/FMEServer.js" type="text/javascript"></script>
+		<script src="https://api.fmeserver.com/js/v3/FMEServer.js" type="text/javascript"></script>
 
 		<script src="js/datadistribution.js" type="text/javascript"></script>
 
@@ -35,21 +29,6 @@
 
 	</head>
 	<body>
-	<span id="safe-ribbon"><a href="http://www.safe.com">Powered by FME</a></span>
-	  <div class="navbar navbar-fixed-top">
-	    <div class="navbar-inner">
-	      <div class="container">
-	        <div class="brand">FME Server Demos</div>
-	        <ul class="nav pull-left">
-            <a href="https://knowledge.safe.com/articles/Samples_and_Demos/Raster-Data-Distribution-with-FME-Server" class="btn"> View KC article</a>
-      			<a href="http://playground.fmeserver.com/demos/" class="btn"><img src="libs/server-icon.png"> View all Demos</a>
-	          <a href="https://github.com/safesoftware/fmepedia-raster-data-distribution" class="btn"><img src="libs/github.png"> Fork GitHub</a>
-	          <a href="https://github.com/safesoftware/fmepedia-raster-data-distribution/archive/master.zip" class="btn"><i class="icon-download-alt"></i> Download Zip
-	          </a>
-	        </ul>
-	      </div>
-	    </div>
-	  </div>
 
 		<div id="mapwrapper">
 			<div id="map_canvas"></div>
@@ -70,19 +49,25 @@
 					<input type="hidden" name="opt_servicemode" value="sync">
 					<input type="hidden" name="opt_responseformat" value="json">
 					<input type="hidden" id="geom" name="GEOM" value="" />
-					<input id='submit' class='btn pull-right btn-primary' type="submit" value="Request Data" >
+					<input id='submit' class='btn' type="submit" value="Request Data" >
 				</form>
 			</div>
 		</div>
-		<div id="footer">
-			<div id="results-panel">
-				<h1>Translation Results</h1>
-				<div id="results" ></div>
-			</div>
-			<div id="query-panel">
-				<h1>Query</h1>
-				<div id="query-panel-results" ></div>
-			</div>
-		</div>
+
+    <!-- Modal -->
+  <div id="errorModal" class="modal hide alert alert-block alert-error " tabindex="-1" aria-hidden="true">
+        <div class="modal-body">
+          <p id="errorMessage">Error</p>
+        </div>
+    <div class="text-right"><button class="btn" data-dismiss="modal" aria-hidden="true">Close</button></div>
+  </div>
+
+  <div id="successModal" class="modal hide alert alert-block " tabindex="-1" aria-hidden="true">
+        <div class="modal-body">
+          <p id="successMessage">Success</p>
+        </div>
+        <div class="text-right"><button class="btn" data-dismiss="modal" aria-hidden="true">Close</button></div>
+  </div>
+
 	</body>
 </html>
